--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,15 +16,11 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-    "numpy==1.24.2",
-    "pandas==1.5.3",
-    "tqdm==4.64.1",
-    "torch",
-    "gym==0.26.2",
-    "opencv-python==4.7.0.68",
-    "matplotlib==3.6.3",
-    "seaborn==0.11.2",
-    "sumtree==0.2.3",
+    "numpy",
+    "pandas",
+    "tqdm",
+    "matplotlib",
+    "seaborn",
 ]
 
 [project.optional-dependencies]
